   the returned values is not affected when randomizing the processing order.

 * Passing argument '.options.future = list(stdout = ...)' can be used to
   to control how standard output should be relayed.  See ?future::Future for
   futher details.  Analogously, '.options.future = list(conditions = ...)'
   can be used to control how messages and warnings are relayed, if at all.


Version: 0.7.0 [2019-01-05]

SIGNIFICANT CHANGES:

 * Globals are now searched for also among elements that foreach() iterates
   over, e.g. foreach(f = F, g = G) %dopar% { f() + g() }.
   
NEW FEATURES:

 * The maximum total size of globals allowed (option 'future.globals.maxSize')
   per future ("chunk") is now scaled up by the number of elements processed by
   the future ("chunk") making the protection approximately invariant to the
   amount of chunking done by foreach.
   
 * Added support for option 'doFuture.foreach.export = "manual", which will
   strictly follow argument '.export' of foreach() for identifying global
   variables.  None of the future+globals framework for identifying global
   variables will be used. This is useful for asserting that the '.export'
   argument is correct.

DOCUMENTATION:

 * Added section on Random Number Generation (RNG) to help("doFuture") and
   updated example("doFuture") with a best-practices RNG example.

SOFTWARE QUALITY:

 * TESTS: The opt-in tests for third-party packages now run their examples
   with example(..., run.dontrun = TRUE) to cover even more use cases.

 * TESTS: Added future.callr to the backend opt-in tested with plyr.

BUG FIXES:

 * If the 'doFuture' package is missing on a worker, an error on
   'length(results) == nbr_of_elements is not TRUE' would be produced.
   Now a more informative error is produced.

 * foreach(..., .export) with '.export' containing "..." would produce an
   error when using globals (<= 0.11.0).

 * foreach() would not relay captured conditions as provided by
   future (>= 0.11.0).

DEPRECATED:
